add other library to testing task as well

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,22 @@
 			},
 			"group": "test",
 			"label": "rust: test tagged-hybrid"
+		},
+		{
+			"type": "cargo",
+			"command": "test",
+			"args": [
+				"--",
+				"--nocapture"
+			],
+			"problemMatcher": [
+				"$rustc"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}/tetrio-replay"
+			},
+			"group": "test",
+			"label": "rust: test tetrio-replay"
 		}
 	]
 }
