switch to using anyhow for result handling

--- a/tetrio-replay/Cargo.toml
+++ b/tetrio-replay/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tagged-hybrid = { path = "../tagged-hybrid" }
-thiserror = "1.0"
+anyhow = "1.0"
