create board type

--- a/tetrio-replay/Cargo.toml
+++ b/tetrio-replay/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tagged-hybrid = { path = "../tagged-hybrid" }
 anyhow = "1.0"
+grid = "0.8"
