--- a/tetrio-replay/Cargo.toml
+++ b/tetrio-replay/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 tagged-hybrid = { path = "../tagged-hybrid" }
 anyhow = "1.0"
 grid = "0.8"
+once_cell = "1.13"
