--- a/bsr-replay/Cargo.toml
+++ b/bsr-replay/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glutin = "0.29"
+# glutin = "0.29"
+glium = "0.32"
