--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["tetrio-replay", "bsr-player", "tagged-hybrid"]
+members = ["tetrio-replay", "bsr-player", "tagged-hybrid", "bsr-tools"]
