--- a/bsr-player/Cargo.toml
+++ b/bsr-player/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# glutin = "0.29"
-glium = "0.32"
 itertools = "0.10"
 tap = "1.0"
 
 gridly_grids = "0.5"
 gridly = "0.9"
+
+macroquad = "0.3"
 
 bsr-tools = { path = "../bsr-tools" }
