get tagged-hybrid ready for crates.io publish

--- a/tagged-hybrid/Cargo.toml
+++ b/tagged-hybrid/Cargo.toml
@@ -2,6 +2,8 @@
 name = "tagged-hybrid"
 version = "0.1.0"
 edition = "2021"
+description = "An attribute for serde crates which helps it read enums tagged the tetrio way"
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
