correct cargo definitions for `ttrm`

--- a/ttrm/Cargo.toml
+++ b/ttrm/Cargo.toml
@@ -2,10 +2,12 @@
 name = "ttrm"
 version = "0.1.0"
 edition = "2021"
+description = "Serde definitions of what a ttrm file looks like (ttr in progress!)"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tagged-hybrid = "0.1"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
