--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["tetrio-replay", "bsr-player", "bsr-tools", "ttrm"]
+members = ["tetrio-replay", "viewtris-player", "viewtris", "ttrm"]
