--- a/tetrio-replay/Cargo.toml
+++ b/tetrio-replay/Cargo.toml
@@ -6,11 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bsr-tools = { path = "../bsr-tools"}
+viewtris = { path = "../viewtris"}
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-# tagged-hybrid = { path = "../tagged-hybrid" }
 ttrm = { path = "../ttrm" }
 anyhow = "1.0"
 
