--- a/viewtris-player/Cargo.toml
+++ b/viewtris-player/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
-name = "bsr-tools"
+name = "viewtris-player"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10"
 tap = "1.0"
-once_cell = "1.13"
 
-strum = { version = "0.24", features = ["derive"]}
-strum_macros = "0.24"
+gridly_grids = "0.5"
+gridly = "0.9"
+
+macroquad = "0.3"
+
+tetrio-replay = { path = "../tetrio-replay" }
