--- a/tetrio-replay/Cargo.toml
+++ b/tetrio-replay/Cargo.toml
@@ -16,5 +16,6 @@ anyhow = "1.0"
 itertools = "0.10"
 tap = "1.0"
 phf = { version = "0.11", features = ["macros"] }
+tinyvec = "1.6"
 
 gridly = "0.9"
